--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_REACT_APP_API=http://localhost:5500/api
+# VITE_REACT_APP_API=http://localhost:5500/api
+VITE_REACT_APP_API=https://contenter-api.onrender.com/
